public/stylesheets/test.css
:root {
    --border_color: black;
    --white: #ffffff;
    --border_thickness: 2px;
}



body {
    /*padding: 20px;*/
    font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
    /*background-color: #22303c;*/
    background-color: #000000;
    /*height: 100vh;
    overflow-y:scroll;*/
}

* {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
    border: none;
    color: white;
}


.header {
    position: sticky;
    top: 0;
    left: 0;
    z-index: 3;
    min-height: 8vmin;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    color: white;
    background-color: #22303c;
    font-size: 30px;
}

.titletext {
    min-width: 33%;
    max-width: 45%;
    text-align: center;
    font-size: 4vmin;
}


.changeweekbutton {
    /*font-size: 3vmin;*/
    font-size: clamp(12px,3vmin,42px);
    background-color: black;
    color: white;
}

.togglevalue {
    color: grey;
}

.toggleviewbutton {
    border: 2px solid white;
    border-radius: 10px;
    min-width: 33%;
    max-width: 45%;
    text-align: center;
    font-size: 4vmin;
    color: black;
}

.weekselectcontainer {
    position: sticky;
    top: 8vmin;
    height: 4vmin;
    left: 0;
    z-index: 3;
    display: flex;
    justify-content: space-between;
    /*font-size: 3vmin;*/
    font-size: clamp(12px,3vmin,42px);
    background-color: #000;
}

.weekdaysectiondisplay {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.weekdaysdisplay {
    display: flex;
    justify-content: space-around;
    width: 100%
}

.opponentgaa {
    /*font-size: 3vmin;*/
    font-size: clamp(12px,3vmin,42px);
    text-align: center;
}

.tablerow{
    position: sticky;
    top: 12vmin;
    left: 0;
    z-index: 3;
    display: flex;
    justify-content: space-around;
    background-color: #000;
}

.schedulechangeweek {
    color: black;
    font-size: clamp(12px,2.5vmin,32px);
}

.teamcolumn {
    width: 30%;
    /*font-size: 3vmin;*/
    font-size: clamp(12px,3vmin,42px);
    display: flex;
    justify-content: space-around;
    align-items: center;
    align-self: flex-end;

}

.team {
    width: 30%;
    display: flex;
    justify-content: space-around;
    overflow: hidden;
    align-items: center;
}

.teamgoalsper {
    /*font-size: 4vmin;*/
    font-size: clamp(16px, 4vmin, 48px);
    margin-right: 2px;
    text-shadow: 1px 1px 0px rgba(0, 0, 0, 1),
        -1px 1px 0px rgba(0, 0, 0, 1),
        1px -1px 0px rgba(0, 0, 0, 1),
        -1px -1px 0px rgba(0, 0, 0, 1);
}

.teamtitle {
    /*font-size: 4vmin;*/
    font-size: clamp(16px, 4vmin, 48px);
    text-align: center;
    margin: 2%;
    text-shadow: 1px 1px 0px rgba(0, 0, 0, 1),
        -1px 1px 0px rgba(0, 0, 0, 1),
        1px -1px 0px rgba(0, 0, 0, 1),
        -1px -1px 0px rgba(0, 0, 0, 1);
}

.weeksummarycolumn {
    width: 05%;
    /*font-size: 4vmin;*/
    font-size: clamp(16px, 4vmin, 42px);
    text-align: center;
    margin: auto;
    background-color: grey;
}

.dayofweek {
    display: flex;
    flex-direction: column;
    text-align: center;
    /*font-size: 3vmin;*/
    font-size: clamp(12px,3vmin,42px);
    width: 100%;
}

.td_container {
    display: flex;
    justify-content: space-around;
    max-height: 60px;
}

.weekly_container {
    display: flex;
    justify-content: space-around;
    width: 100%;
}
/*
.weekly_game {
    text-align: center;
    width: 100%;
    max-height: 60px;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}*/

.teamID {
    display: flex;
    justify-content: space-around;
    align-items: center;
}


.weekly_game {
    display: flex;
    position: relative;
    justify-content: space-around;
    align-content: space-around;
    overflow: hidden;
    width: 100%;
}


.gameteamimage {
    max-width: 80%;
    transform: scale(1.2);
    max-height: 60px;
    vertical-align: middle;
    /*position: relative;
    top: -33%;*/
    
}

.gamedatas {
    position: absolute;
    bottom: 0%;
    font-size: clamp(12px, 3vmin, 32px);
    /*font-size: 3vmin;*/
    text-align: center;
    align-self: flex-end;
    background-color: rgba(0, 0, 0, 0.5);
    width: 100%;
    max-height: 50%;
    color: white;
    text-shadow: 1px 1px 0px black,
        -1px 1px 0px black,
        1px -1px 0px black,
        -1px -1px 0px black;
}

.teamimage {
    max-width: 50%;
    transform: scale(1);
    max-height: 60px;
    vertical-align: middle;
    overflow: hidden;
}



.awayteam {
    background-color: ghostwhite;
}



.today_column {
    background-color: green;
}



.miniwin {
    background-color: lightgreen;
}

.miniloss {
    background-color: lightcoral;
}

.minitie {
    background-color: #aaaaaa;
}










.fivegames {
    background-color: #f7a801
}

.manygames {
    background-color: #f76868;
}

.threegames {
    background-color: #7732a4;
}

.twogames {
    background-color: #016fa0;
}

.onegame {
    background-color: #02a9b0;
}

.nogames {
    
    background-color: #000;
}











#ANA {
    background-color: #f95500;
}
#ARI {
    /*background-color: #e5d8bf;*/
    background-color: #8e0028;
    color: oldlace;
}
#BOS {
    background-color: #fdb41f;
}
#BUF {
    background-color: #003087;
    color: #e0a422;
}
#CGY {
    background-color: #c8102e;
    color: oldlace;
    /*color: #f6b240*/
}
#CAR {
    /*background-color: #e03a3e;*/
    background-color: #e03a3e;
    /*#c8102e*/
    color: oldlace;
}
#CHI {
    background-color: #d3010d;
    color: oldlace;
}
#COL {
    background-color: #6f263d;
    color: oldlace;
}
#CBJ {
    background-color: #00285c;
    color: oldlace;
}
#DAL {
    background-color: #006a4e;
    color: oldlace;
}
#DET {
    background-color: #c8102b;
    color: #f7f7f7;
}
#EDM {
    background-color: #003777;
    color: #f0631d;
}
#FLA {
    background-color: #c4243e;
    color: oldlace;
}
#LAK {
    /*background-color: #919597;*/
    background-color: #a3abae;
    color: #1a1a1b;
}
#MIN {
    background-color: #025736;
    color: oldlace;
}
#MTL {
    background-color: #bf2f38;
    color: oldlace;
}
#NSH {
    /*background-color: #041342;*/
    background-color: #ffb81c;
    color: #041342;
    /*color: #ffb81c;*/
}
#NJD {
    background-color: #c2102d;
    color: oldlace;
    /*color: #1b1b1b;*/
}
#NYI {
    background-color: #002f83;
    color: #f44a01;
}
#NYR {
    background-color: #0038a9;
    color: oldlace;
    /*color: #ce1127*/
}
#OTT {
    background-color: #da1a32;
    color: #000000;
}
#PHI {
    background-color: #eb410e;
    color: oldlace;
}
#PIT {
    background-color: #ffb81c;
    color: #010101;
}
#SJS {
    background-color: #00788a;
    color: oldlace;
}
#SEA {
    background-color: #95d7d7;
    /*color: oldlace;*/
    color: #001429;
}
#STL {
    background-color: #002f87;
    color: #fdba31;
}
#TBL {
    background-color: #002765;
    /*background-color: #00205b;*/
    color: oldlace;
}
#TOR {
    /*background-color: #00488e;*/
    background-color: #013e7d;
    color: oldlace;
}
#VAN {
    /*background-color: #027f3d;*/
    background-color: #01663f;
    color: oldlace;
}
#VGK {
    background-color: #d2b760;
    color: #000000;
}
#WSH {
    background-color: #cf132b;
    color: oldlace;
}
#WPG {
    background-color: #041e42;
    color: oldlace;
}

